- fixed a few UI issues (autocomplete tool search on mobile, calendar right buttons on desktop)

--- a/NEMO/static/fullcalendar/fullcalendar.css
+++ b/NEMO/static/fullcalendar/fullcalendar.css
@@ -799,6 +799,7 @@ a.fc-more:hover {
 
 .fc-toolbar .fc-right {
 	float: right;
+	margin-right: 15px;
 }
 
 .fc-toolbar .fc-center {
